<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mybrary.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mybrary.ui.review.ReviewFragment"
        android:label="@string/title_review"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mybrary.ui.checklist.ChecklistFragment"
        android:label="@string/title_checklist"
        tools:layout="@layout/fragment_checklist" />
</navigation>
