<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment"
    android:background="@color/colorSecondary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="17dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_header_title"
                android:textSize="20dp"
                android:textColor="@color/colorLightText"
                />
            <View android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1" />
            <Button
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:textColor="@color/colorLightText"
                android:background="@drawable/button_shape"
                android:id="@+id/loginButton"
                android:layout_marginRight="10dp"
                android:text="로그인" />
            <Button
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:textColor="@color/colorLightText"
                android:background="@drawable/button_shape"
                android:id="@+id/logoutButton"
                android:layout_marginRight="10dp"
                android:text="로그아웃" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/gallery_date"
            android:textColor="@color/colorLightText"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviewList"
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="380dp">

    </androidx.recyclerview.widget.RecyclerView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >
        <Button
            android:id="@+id/allListButton"
            android:onClick="moveToReviewListActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLightText"
            android:background="@drawable/button_shape"
            android:text="@string/all_list" />
    </RelativeLayout>
</LinearLayout>