<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorSecondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.checklist.ChecklistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">

        <GridLayout
            android:layout_marginBottom="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="5">
            <TextView
                android:text="@string/checklist_header_title"
                android:textColor="@color/colorLightText"
                android:textSize="20dp"/>

            <LinearLayout
                android:layout_column="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageButton
                    android:layout_marginRight="4dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/autorenew"
                    android:background="#00000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checklist_check_disable"
                    android:textColor="@color/colorLightText"
                    />
            </LinearLayout>
        </GridLayout>
        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:background="@color/colorItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/before_reading"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorLightText"
                    android:layout_marginBottom="20dp"/>
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="1"
                    android:rowCount="4">
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="14dp"
                        android:gravity="center">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/assignment_turned_in"
                            android:background="#00000000"
                            android:layout_marginRight="16dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorLightText"
                            android:text="그 책을 읽는 이유를 분명히 하기" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="14dp"
                        android:gravity="center">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/assignment_turned_in"
                            android:background="#00000000"
                            android:layout_marginRight="16dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorLightText"
                            android:text="필요한 사전 지식이 없는지 체크" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="14dp"
                        android:gravity="center">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/assignment_turned_in"
                            android:background="#00000000"
                            android:layout_marginRight="16dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorLightText"
                            android:text="내용을 미리 유추해보기" />
                    </LinearLayout>
                </GridLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/border_bottom">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorLightText"
                        android:text="0 / 3"/>

                </LinearLayout>
            </LinearLayout>
            <View
                android:background="@drawable/shadow_bottom"
                android:layout_width="fill_parent"
                android:layout_height="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            >
            <LinearLayout
                android:background="@color/colorItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/while_reading"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorLightText"
                    android:layout_marginBottom="20dp"/>
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="1"
                    android:rowCount="4">
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="14dp"
                        android:gravity="center">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/assignment_turned_in"
                            android:background="#00000000"
                            android:layout_marginRight="16dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorLightText"
                            android:text="책을 보면서 드는 질문들을 정리하기" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="14dp"
                        android:gravity="center">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/assignment_turned_in"
                            android:background="#00000000"
                            android:layout_marginRight="16dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorLightText"
                            android:text="책 내용의 요지들을 정리하기" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="14dp"
                        android:gravity="center">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/assignment_turned_in"
                            android:background="#00000000"
                            android:layout_marginRight="16dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorLightText"
                            android:text="중요한 부분에 표시하기" />
                    </LinearLayout>

                </GridLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/border_bottom">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorLightText"
                        android:text="0 / 3"/>

                </LinearLayout>
            </LinearLayout>
            <View
                android:background="@drawable/shadow_bottom"
                android:layout_width="fill_parent"
                android:layout_height="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:background="@color/colorItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/after_reading"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorLightText"
                    android:layout_marginBottom="20dp"/>
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="1"
                    android:rowCount="4">
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="14dp"
                        android:gravity="center">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/assignment_turned_in"
                            android:background="#00000000"
                            android:layout_marginRight="16dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorLightText"
                            android:text="감상을 다른 사람에게 말로 들려주기" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="14dp"
                        android:gravity="center">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/assignment_turned_in"
                            android:background="#00000000"
                            android:layout_marginRight="16dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorLightText"
                            android:text="읽은 책과 연관 있는 다음 책 찾기" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="14dp"
                        android:gravity="center">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/assignment_turned_in"
                            android:background="#00000000"
                            android:layout_marginRight="16dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorLightText"
                            android:text="독서 리뷰 남기기" />
                    </LinearLayout>

                </GridLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/border_bottom">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorLightText"
                        android:text="0 / 3"/>

                </LinearLayout>
            </LinearLayout>
            <View
                android:background="@drawable/shadow_bottom"
                android:layout_width="fill_parent"
                android:layout_height="5dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>